# text-dedup

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.claude/rules/: branch.md  commit.md
text_dedup/: __init__.py  about.py  cli.py  encoder.py
