[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text_dedup"
version = "0.1.0"
description = "deduplicate texts"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "lovit" }]
dependencies = ["tqdm"]

[project.scripts]
text-dedup = "text_dedup.cli:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
